fix wrapping table headers

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -53,6 +53,7 @@
 
     &.sort-header {
       cursor: pointer;
+      white-space: nowrap;
 
       &:selection {
         background: transparent;
